começando rotas um pouco mais complexas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,16 @@
 <nav>
-  <div >
-    <a  class="brand-logo">Rotas Ng2</a>
-    <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li><a routerLink="login">Login</a></li>
-      <li><a routerLink="cursos">Cursos</a></li>
+  <div class=" nav-wrapper">
+    <a routerLink="" class="right brand-logo">Rotas Ng2</a>
+    <ul id="nav-mobile" class="left hide-on-med-and-down">
+      <li routerLinkActive="active"><a routerLink="/login">Login</a></li>
+      <li routerLinkActive="active"><a routerLink="/cursos">Cursos</a></li>
+      <li routerLinkActive="active"><a [routerLink]="['curso', idCurso.value]">Curso com Id</a></li>
          </ul>
   </div>
 </nav>
-<div class="container">
 
+<div class="container">
+<p> Entre com o id do curso</p>
+<input #idCurso>
 <router-outlet></router-outlet>
 </div>
