--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,14 @@
-/*@import "../node_modules/bootstrap/scss/functions";*/
+
+/* @import '~bootstrap/dist/css/bootstrap.min.css'; */
 @import "~materialize-css/dist/css/materialize.css";
 /* You can add global styles to this file, and also import other style files */
+
+
+
+/*$materialize-fonts-path: '~materialize-angular/fonts';
+ 
+@import '~materialize-angular/styles/materialize-angular.scss';*/
+
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
