--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <nav>
   <div class=" nav-wrapper">
-    <a routerLink="" class="right brand-logo">Rotas Ng2</a>
+    <a routerLink="" class="center brand-logo">Rotas Ng2</a>
     <ul id="nav-mobile" class="left hide-on-med-and-down">
       <li routerLinkActive="active"><a routerLink="/login">Login</a></li>
-      <li routerLinkActive="active"><a routerLink="/cursos">Cursos</a></li>
+      <li routerLinkActive="active"><a routerLink="/cursos" [queryParams]="{pagina:1}">Cursos</a></li>
       <li routerLinkActive="active"><a [routerLink]="['curso', idCurso.value]">Curso com Id</a></li>
          </ul>
   </div>
